@@ -3,11 +3,11 @@
 
 ### BEGIN INIT INFO
 # Provides:            sysctl
-# Required-Start:      udev
+# Required-Start:      mountkernfs
 # Should-Start:
 # Required-Stop:
 # Should-Stop:
-# Default-Start:       sysinit
+# Default-Start:       S
 # Default-Stop:
 # Short-Description:   Makes changes to the proc filesystem
 # Description:         Makes changes to the proc filesystem as defined in
