@@ -5,8 +5,8 @@
 # Provides:            $syslog
 # Required-Start:      localnet
 # Should-Start:
-# Required-Stop:       sendsignals $local_fs swap
-# Should-Stop:         halt reboot
+# Required-Stop:       $local_fs
+# Should-Stop:
 # Default-Start:       2 3 4 5
 # Default-Stop:        0 1 6
 # Short-Description:   Starts kernel and system log daemons.
